add some vue in frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.12.1",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
     "bootstrap": "^4.5.2",
