--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "nanoid": "^2.1.11",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "sweetalert2": "^10.5.1"
   },
   "devDependencies": {}
 }
